tested loading word2vec model and pulling in training data

--- a/test/word2vec_model.ipynb
+++ b/test/word2vec_model.ipynb
@@ -20,7 +20,7 @@
    "outputs": [],
    "source": [
     "# Load Google's pre-trained Word2Vec model.\n",
-    "model = gensim.models.KeyedVectors.load_word2vec_format('../../word2vec.gi/GoogleNews-vectors-negative300.bin', binary=True)"
+    "model = gensim.models.KeyedVectors.load_word2vec_format('../word2vec.gi/GoogleNews-vectors-negative300.bin', binary=True)"
    ]
   },
   {
