--- a/test/09_train_dbow_model.ipynb
+++ b/test/09_train_dbow_model.ipynb
@@ -117,6 +117,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -127,7 +134,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "START 2017-04-25 18:10:24.934073\n"
+      "START 2017-04-25 18:10:24.934073\n",
+      "Training epoch 0\n"
      ]
     }
    ],
