--- a/test/15_tf_idf.ipynb
+++ b/test/15_tf_idf.ipynb
@@ -2,33 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Once deleted, variables cannot be recovered. Proceed (y/[n])? y\n",
-      "Flushing output cache (5 entries)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Clear memory\n",
-    "%reset Out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\camro\\Anaconda3\\lib\\site-packages\\gensim\\utils.py:855: UserWarning: detected Windows; aliasing chunkize to chunkize_serial\n",
+      "  warnings.warn(\"detected Windows; aliasing chunkize to chunkize_serial\")\n",
+      "C:\\Users\\camro\\Anaconda3\\lib\\site-packages\\sklearn\\cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "# Import libraries\n",
     "import math\n",
@@ -52,9 +42,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -65,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -77,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -89,7 +79,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Get a term vector for each question\n",
+    "vectorizer = TfidfVectorizer()\n",
+    "tfidf_vector = vectorizer.fit_transform(questions_df.preproc_question)\n",
+    "questions_df['tfidf_vector'] = list(tfidf_vector)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -104,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -117,124 +121,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Get a term vector for each question\n",
-    "vectorizer = TfidfVectorizer()\n",
-    "tfidf_vector_1 = vectorizer.fit_transform(questions_df.preproc_question_1)\n",
-    "tfidf_vector_2 = vectorizer.fit_transform(questions_df.preproc_question_2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<1x99949 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 2 stored elements in Compressed Sparse Row format>"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\camro\\Anaconda3\\lib\\site-packages\\scipy\\spatial\\distance.py:326: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  dist = 1.0 - np.dot(u, v) / (norm(u) * norm(v))\n"
+     ]
     }
    ],
    "source": [
-    "tfidf_vector_1[245245]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<1x100084 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 3 stored elements in Compressed Sparse Row format>"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tfidf_vector_2[454]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "questions_df['tfidf_cos_sim'] = questions_df.apply(lambda x: (1 - cosine(x['tfidf_vect_1'].toarray(), x['tfidf_vect_2'].toarray())), axis=1)\n",
+    "questions_df['tfidf_cos_sim'] = questions_df.apply(lambda x: (1 - cosine(x['tfidf_vector_1'].toarray(), x['tfidf_vector_2'].toarray())), axis=1)\n",
     "questions_df.to_pickle('./pickles.gi/questions_df_tfidf_cosine_similarity')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>test</th>\n",
+       "      <th>pid</th>\n",
+       "      <th>qid_1</th>\n",
+       "      <th>question_1</th>\n",
+       "      <th>token_list_1</th>\n",
+       "      <th>preproc_question_1</th>\n",
+       "      <th>tfidf_vector_1</th>\n",
+       "      <th>qid_2</th>\n",
+       "      <th>question_2</th>\n",
+       "      <th>token_list_2</th>\n",
+       "      <th>preproc_question_2</th>\n",
+       "      <th>tfidf_vector_2</th>\n",
+       "      <th>tfidf_cos_sim</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>What is the step by step guide to invest in sh...</td>\n",
+       "      <td>[step, step, guide, invest, share, market, india]</td>\n",
+       "      <td>step step guide invest share market india</td>\n",
+       "      <td>(0, 94663)\\t0.686112034821\\n  (0, 45076)\\t0....</td>\n",
+       "      <td>2</td>\n",
+       "      <td>What is the step by step guide to invest in sh...</td>\n",
+       "      <td>[step, step, guide, invest, share, market]</td>\n",
+       "      <td>step step guide invest share market</td>\n",
+       "      <td>(0, 94663)\\t0.7005065502\\n  (0, 45076)\\t0.41...</td>\n",
+       "      <td>0.979451</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>What is the story of Kohinoor (Koh-i-Noor) Dia...</td>\n",
+       "      <td>[story, kohinoor, koh, noor, diamond]</td>\n",
+       "      <td>story kohinoor koh noor diamond</td>\n",
+       "      <td>(0, 94981)\\t0.28471980451\\n  (0, 57115)\\t0.5...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>What would happen if the Indian government sto...</td>\n",
+       "      <td>[would, happen, indian, government, stole, koh...</td>\n",
+       "      <td>would happen indian government stole kohinoor ...</td>\n",
+       "      <td>(0, 57115)\\t0.415778246801\\n  (0, 57112)\\t0....</td>\n",
+       "      <td>0.761120</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>How can I increase the speed of my internet co...</td>\n",
+       "      <td>[increase, speed, internet, connection, using,...</td>\n",
+       "      <td>increase speed internet connection using vpn</td>\n",
+       "      <td>(0, 50805)\\t0.364988290024\\n  (0, 93488)\\t0....</td>\n",
+       "      <td>6</td>\n",
+       "      <td>How can Internet speed be increased by hacking...</td>\n",
+       "      <td>[internet, speed, increased, hacking, dns]</td>\n",
+       "      <td>internet speed increased hacking dns</td>\n",
+       "      <td>(0, 93488)\\t0.365133417374\\n  (0, 52186)\\t0....</td>\n",
+       "      <td>0.274354</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Why am I mentally very lonely? How can I solve...</td>\n",
+       "      <td>[mentally, lonely, solve]</td>\n",
+       "      <td>mentally lonely solve</td>\n",
+       "      <td>(0, 64269)\\t0.617633676496\\n  (0, 60405)\\t0....</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Find the remainder when [math]23^{24}[/math] i...</td>\n",
+       "      <td>[find, remainder, math, 23, 24, math, divided,...</td>\n",
+       "      <td>find remainder math 23 24 math divided 24 23</td>\n",
+       "      <td>(0, 39537)\\t0.172910152077\\n  (0, 84134)\\t0....</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Which one dissolve in water quikly sugar, salt...</td>\n",
+       "      <td>[one, dissolve, water, quikly, sugar, salt, me...</td>\n",
+       "      <td>one dissolve water quikly sugar salt methane c...</td>\n",
+       "      <td>(0, 72242)\\t0.154796417483\\n  (0, 32331)\\t0....</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Which fish would survive in salt water?</td>\n",
+       "      <td>[fish, would, survive, salt, water]</td>\n",
+       "      <td>fish would survive salt water</td>\n",
+       "      <td>(0, 109184)\\t0.283396040472\\n  (0, 107410)\\t...</td>\n",
+       "      <td>0.230124</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "-2.2204460492503131e-16"
+       "   test  pid  qid_1                                         question_1  \\\n",
+       "0     0    0      1  What is the step by step guide to invest in sh...   \n",
+       "1     0    1      3  What is the story of Kohinoor (Koh-i-Noor) Dia...   \n",
+       "2     0    2      5  How can I increase the speed of my internet co...   \n",
+       "3     0    3      7  Why am I mentally very lonely? How can I solve...   \n",
+       "4     0    4      9  Which one dissolve in water quikly sugar, salt...   \n",
+       "\n",
+       "                                        token_list_1  \\\n",
+       "0  [step, step, guide, invest, share, market, india]   \n",
+       "1              [story, kohinoor, koh, noor, diamond]   \n",
+       "2  [increase, speed, internet, connection, using,...   \n",
+       "3                          [mentally, lonely, solve]   \n",
+       "4  [one, dissolve, water, quikly, sugar, salt, me...   \n",
+       "\n",
+       "                                  preproc_question_1  \\\n",
+       "0          step step guide invest share market india   \n",
+       "1                    story kohinoor koh noor diamond   \n",
+       "2       increase speed internet connection using vpn   \n",
+       "3                              mentally lonely solve   \n",
+       "4  one dissolve water quikly sugar salt methane c...   \n",
+       "\n",
+       "                                      tfidf_vector_1  qid_2  \\\n",
+       "0    (0, 94663)\\t0.686112034821\\n  (0, 45076)\\t0....      2   \n",
+       "1    (0, 94981)\\t0.28471980451\\n  (0, 57115)\\t0.5...      4   \n",
+       "2    (0, 50805)\\t0.364988290024\\n  (0, 93488)\\t0....      6   \n",
+       "3    (0, 64269)\\t0.617633676496\\n  (0, 60405)\\t0....      8   \n",
+       "4    (0, 72242)\\t0.154796417483\\n  (0, 32331)\\t0....     10   \n",
+       "\n",
+       "                                          question_2  \\\n",
+       "0  What is the step by step guide to invest in sh...   \n",
+       "1  What would happen if the Indian government sto...   \n",
+       "2  How can Internet speed be increased by hacking...   \n",
+       "3  Find the remainder when [math]23^{24}[/math] i...   \n",
+       "4            Which fish would survive in salt water?   \n",
+       "\n",
+       "                                        token_list_2  \\\n",
+       "0         [step, step, guide, invest, share, market]   \n",
+       "1  [would, happen, indian, government, stole, koh...   \n",
+       "2         [internet, speed, increased, hacking, dns]   \n",
+       "3  [find, remainder, math, 23, 24, math, divided,...   \n",
+       "4                [fish, would, survive, salt, water]   \n",
+       "\n",
+       "                                  preproc_question_2  \\\n",
+       "0                step step guide invest share market   \n",
+       "1  would happen indian government stole kohinoor ...   \n",
+       "2               internet speed increased hacking dns   \n",
+       "3       find remainder math 23 24 math divided 24 23   \n",
+       "4                      fish would survive salt water   \n",
+       "\n",
+       "                                      tfidf_vector_2  tfidf_cos_sim  \n",
+       "0    (0, 94663)\\t0.7005065502\\n  (0, 45076)\\t0.41...       0.979451  \n",
+       "1    (0, 57115)\\t0.415778246801\\n  (0, 57112)\\t0....       0.761120  \n",
+       "2    (0, 93488)\\t0.365133417374\\n  (0, 52186)\\t0....       0.274354  \n",
+       "3    (0, 39537)\\t0.172910152077\\n  (0, 84134)\\t0....       0.000000  \n",
+       "4    (0, 109184)\\t0.283396040472\\n  (0, 107410)\\t...       0.230124  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cosine(tfidf_vector_1[0].toarray(), tfidf_vector_1[0].toarray())"
+    "questions_df.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
