--- a/test/15_tf_idf.ipynb
+++ b/test/15_tf_idf.ipynb
@@ -2,25 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\camro\\Anaconda3\\lib\\site-packages\\gensim\\utils.py:855: UserWarning: detected Windows; aliasing chunkize to chunkize_serial\n",
-      "  warnings.warn(\"detected Windows; aliasing chunkize to chunkize_serial\")\n",
-      "C:\\Users\\camro\\Anaconda3\\lib\\site-packages\\sklearn\\cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
-      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import libraries\n",
+    "import gc\n",
     "import math\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -38,6 +28,28 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn import model_selection\n",
     "from sklearn.metrics import log_loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gc.collect()"
    ]
   },
   {
@@ -320,6 +332,18 @@
    ],
    "source": [
     "questions_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# IMPORT CONTINUED WORK\n",
+    "questions_df = pd.read_pickle('./pickles.gi/questions_df_tfidf_cosine_similarity')"
    ]
   },
   {
