--- a/test/kernels/notebook.ipynb
+++ b/test/kernels/notebook.ipynb
@@ -992,59 +992,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0]\ttrain-logloss:0.68319\tvalid-logloss:0.683238\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 50 rounds.\n",
-      "[10]\ttrain-logloss:0.602042\tvalid-logloss:0.602515\n",
-      "[20]\ttrain-logloss:0.544864\tvalid-logloss:0.545664\n",
-      "[30]\ttrain-logloss:0.503149\tvalid-logloss:0.504189\n",
-      "[40]\ttrain-logloss:0.471995\tvalid-logloss:0.473231\n",
-      "[50]\ttrain-logloss:0.448348\tvalid-logloss:0.449746\n",
-      "[60]\ttrain-logloss:0.430176\tvalid-logloss:0.431707\n",
-      "[70]\ttrain-logloss:0.416073\tvalid-logloss:0.417712\n",
-      "[80]\ttrain-logloss:0.404965\tvalid-logloss:0.406708\n",
-      "[90]\ttrain-logloss:0.396269\tvalid-logloss:0.398103\n",
-      "[100]\ttrain-logloss:0.389433\tvalid-logloss:0.391333\n",
-      "[110]\ttrain-logloss:0.384021\tvalid-logloss:0.385971\n",
-      "[120]\ttrain-logloss:0.379764\tvalid-logloss:0.381743\n",
-      "[130]\ttrain-logloss:0.376355\tvalid-logloss:0.378367\n",
-      "[140]\ttrain-logloss:0.373646\tvalid-logloss:0.375679\n",
-      "[150]\ttrain-logloss:0.37147\tvalid-logloss:0.373525\n",
-      "[160]\ttrain-logloss:0.369721\tvalid-logloss:0.371797\n",
-      "[170]\ttrain-logloss:0.36832\tvalid-logloss:0.370414\n",
-      "[180]\ttrain-logloss:0.367192\tvalid-logloss:0.369298\n",
-      "[190]\ttrain-logloss:0.366284\tvalid-logloss:0.368402\n",
-      "[200]\ttrain-logloss:0.365554\tvalid-logloss:0.367678\n",
-      "[210]\ttrain-logloss:0.364953\tvalid-logloss:0.367084\n",
-      "[220]\ttrain-logloss:0.364459\tvalid-logloss:0.366597\n",
-      "[230]\ttrain-logloss:0.364057\tvalid-logloss:0.366204\n",
-      "[240]\ttrain-logloss:0.363707\tvalid-logloss:0.365865\n",
-      "[250]\ttrain-logloss:0.363421\tvalid-logloss:0.365589\n",
-      "[260]\ttrain-logloss:0.363168\tvalid-logloss:0.365349\n",
-      "[270]\ttrain-logloss:0.362942\tvalid-logloss:0.365127\n",
-      "[280]\ttrain-logloss:0.362723\tvalid-logloss:0.364918\n",
-      "[290]\ttrain-logloss:0.362531\tvalid-logloss:0.364739\n",
-      "[300]\ttrain-logloss:0.362363\tvalid-logloss:0.364579\n",
-      "[310]\ttrain-logloss:0.362228\tvalid-logloss:0.364451\n",
-      "[320]\ttrain-logloss:0.362091\tvalid-logloss:0.364314\n",
-      "[330]\ttrain-logloss:0.361968\tvalid-logloss:0.364198\n",
-      "[340]\ttrain-logloss:0.361845\tvalid-logloss:0.364079\n",
-      "[350]\ttrain-logloss:0.361739\tvalid-logloss:0.363982\n",
-      "[360]\ttrain-logloss:0.361631\tvalid-logloss:0.363883\n",
-      "[370]\ttrain-logloss:0.361533\tvalid-logloss:0.363795\n",
-      "[380]\ttrain-logloss:0.361447\tvalid-logloss:0.36372\n",
-      "[390]\ttrain-logloss:0.361358\tvalid-logloss:0.363636\n",
-      "[399]\ttrain-logloss:0.361295\tvalid-logloss:0.363584\n"
+     "ename": "NameError",
+     "evalue": "name 'x_train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-c2e310cc8671>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mparams\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'updater'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'grow_gpu'\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0md_train\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mxgb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDMatrix\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0my_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0md_valid\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mxgb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDMatrix\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_valid\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0my_valid\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mwatchlist\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0md_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'train'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0md_valid\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'valid'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'x_train' is not defined"
      ]
     }
    ],
